# avr_blink

./: .gitignore  CMakeLists.txt  README.md
cmake/: avr-gcc-toolchain.cmake
src/: main.c
